--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -266,8 +266,9 @@ input::placeholder {
 }
 
 .auth-form h1 {
+  margin-top: 80px !important;
   color: var(--dark-brown);
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .auth-form input {
